[package]
name = "history-shrinker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
btreemultimap = "0.1.1"
clap = { version = "4", features = ["derive"] }
glob = "0.3"
home = "0"
log = "0"
once_cell = "1.19.0"
simple_logger = "5"
regex = "1.10.5"
